<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E3C3C"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:text="@string/crypto_portfolio"
            android:textColor="#EFEFEF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/labelLoginTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:foregroundGravity="left"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/labelLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="monospace"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/inputLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:shadowColor="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#9C27B0"
            android:textColorHint="#BFB8B8"
            android:textColorLink="#9C27B0"
            android:textSize="22sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#BFB8B8"
            android:textSize="22sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/login"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/labelSwitchToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/register"
            android:textAlignment="textEnd"
            android:textColor="#448AFF"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>